--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet-async": "^1.1.2",
+    "react-icons": "^4.3.1",
     "react-intersection-observer": "^8.32.1",
     "swr": "^1.0.1"
   },
