--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-helmet-async": "^1.1.2",
     "react-icons": "^4.3.1",
     "react-intersection-observer": "^8.32.1",
+    "react-multi-carousel": "^2.6.5",
     "swr": "^1.0.1"
   },
   "devDependencies": {
